17927 FIX Fix filter delete button floating in Safari
SUP-23508

In the Safari browser, the filter delete button floated to the top of the filter list rather than the top of the filter item.
This resulted in overlapping delete buttons when more than one filter was set.

The floating behaviour has now been fixed and filter items can now be deleted using their respective delete buttons.

--- a/web/htdocs/themes/facelift/scss/_views.scss
+++ b/web/htdocs/themes/facelift/scss/_views.scss
@@ -492,10 +492,11 @@ div.flex_break {
 div.side_popup_content table.valuespec_listof.filter {
   td.vlof_buttons {
     width: 0;
+    vertical-align: top;
 
     a.delete_button img {
       position: absolute;
-      top: 4px;
+      margin-top: 4px;
       right: $simplebar-track-width;
       z-index: 5;
       width: 12px;
